refactor the agent properties and all the neurons to work properly

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ add_executable(boids
     src/agent.cpp
     src/conditions.cpp
     src/neuralagent.cpp
+    src/neuron.cpp
     src/random.cpp
     src/main.cpp
 )
