--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,5 +25,13 @@ target_link_libraries(boids PRIVATE SDL2::SDL2_ttf)
 find_package(sdl2-gfx CONFIG REQUIRED)
 target_link_libraries(boids PRIVATE SDL2::SDL2_gfx)
 
+find_package(sdl2-image CONFIG REQUIRED)
+target_link_libraries(boids PRIVATE SDL2::SDL2_image)
+
 find_package(nanoflann CONFIG REQUIRED)
 target_link_libraries(boids PRIVATE nanoflann::nanoflann)
+
+find_package(FFMPEG REQUIRED)
+target_include_directories(boids PRIVATE ${FFMPEG_INCLUDE_DIRS})
+target_link_directories(boids PRIVATE ${FFMPEG_LIBRARY_DIRS})
+target_link_libraries(boids PRIVATE ${FFMPEG_LIBRARIES})
