--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.0)
 project(genetic-boids)
 
-SET(CMAKE_CXX_FLAGS "-std=c++20 -fopenmp")
+SET(CMAKE_CXX_FLAGS "-std=c++20")
 
 OPTION(FEATURE_RENDER_STATS "Enable support for rendering stats")
 OPTION(FEATURE_RENDER_VIDEO "Enable support for rendering to video")
@@ -20,29 +20,43 @@ add_executable(boids
     src/main.cpp
 )
 
-find_package(SDL2 CONFIG REQUIRED)
-target_link_libraries(boids PRIVATE SDL2::SDL2main SDL2::SDL2-static)
+if( ${CMAKE_SYSTEM_NAME} MATCHES "Emscripten")
 
-find_package(sdl2-gfx CONFIG REQUIRED)
-target_link_libraries(boids PRIVATE SDL2::SDL2_gfx)
+    set(USE_FLAGS "-s USE_SDL=2 -s USE_SDL_GFX=2 -O3")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${USE_FLAGS}")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${USE_FLAGS}")
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${USE_FLAGS} -s ASYNCIFY")
+    set(CMAKE_EXECUTABLE_SUFFIX .html)
 
-if (FEATURE_RENDER_STATS)
-add_definitions(-DFEATURE_RENDER_STATS)
-target_link_libraries(boids PRIVATE fontconfig)
-find_package(sdl2-ttf CONFIG REQUIRED)
-target_link_libraries(boids PRIVATE SDL2::SDL2_ttf)
-endif()
+else()
 
-if (FEATURE_RENDER_VIDEO)
-add_definitions(-DFEATURE_RENDER_VIDEO)
-find_package(FFMPEG REQUIRED)
-target_include_directories(boids PRIVATE ${FFMPEG_INCLUDE_DIRS})
-target_link_directories(boids PRIVATE ${FFMPEG_LIBRARY_DIRS})
-target_link_libraries(boids PRIVATE ${FFMPEG_LIBRARIES})
-endif()
+    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
 
-if (FEATURE_CLI_OPTIONS)
-add_definitions(-DFEATURE_CLI_OPTIONS)
-find_package(argparse CONFIG REQUIRED)
-target_link_libraries(boids PRIVATE argparse::argparse)
-endif()
+    find_package(SDL2 CONFIG REQUIRED)
+    target_link_libraries(boids PRIVATE SDL2::SDL2main SDL2::SDL2-static)
+
+    find_package(sdl2-gfx CONFIG REQUIRED)
+    target_link_libraries(boids PRIVATE SDL2::SDL2_gfx)
+
+    if (FEATURE_RENDER_STATS)
+        add_definitions(-DFEATURE_RENDER_STATS)
+        target_link_libraries(boids PRIVATE fontconfig)
+        find_package(sdl2-ttf CONFIG REQUIRED)
+        target_link_libraries(boids PRIVATE SDL2::SDL2_ttf)
+    endif() # FEATURE_RENDER_STATS
+
+    if (FEATURE_RENDER_VIDEO)
+        add_definitions(-DFEATURE_RENDER_VIDEO)
+        find_package(FFMPEG REQUIRED)
+        target_include_directories(boids PRIVATE ${FFMPEG_INCLUDE_DIRS})
+        target_link_directories(boids PRIVATE ${FFMPEG_LIBRARY_DIRS})
+        target_link_libraries(boids PRIVATE ${FFMPEG_LIBRARIES})
+    endif() # FEATURE_RENDER_VIDEO
+
+    if (FEATURE_CLI_OPTIONS)
+        add_definitions(-DFEATURE_CLI_OPTIONS)
+        find_package(argparse CONFIG REQUIRED)
+        target_link_libraries(boids PRIVATE argparse::argparse)
+    endif() # FEATURE_CLI_OPTIONS
+
+endif() # Emscripten
